# choral-mr

./: .gitignore  README.md  docker-compose-as2.yml  docker-compose-tb.yaml  docker-compose.yaml
choral_ws/: land_tello.sh  launch-gs_bag.yaml  mission_as2.py  (+3 more)
choral_ws/src/Bloomxai/: CMakeLists.txt
choral_ws/src/Bloomxai/bloomxai_map/benchmark/: CMakeLists.txt
choral_ws/src/Bloomxai/bloomxai_map/include/bloomxai_map/: pcl_utils.hpp  semantic_map.hpp
choral_ws/src/Bloomxai/bloomxai_map/include/bonxai/: serialization.hpp
choral_ws/src/Bloomxai/bloomxai_map/src/: pcl_utils.cpp  semantic_map.cpp
choral_ws/src/Bloomxai/bloomxai_ros/config/: bloomxai_naradio.yaml  bloomxai_trident.yaml  rviz.rviz
choral_ws/src/Bloomxai/bloomxai_ros/include/bloomxai_ros/: bloomxai_server.hpp  semantic_utils.hpp
choral_ws/src/Bloomxai/bloomxai_ros/launch/: bonxai_mapping.launch.py  bonxai_mapping.launch.xml  bonxai_mapping_bag.launch.xml
choral_ws/src/Bloomxai/bloomxai_ros/src/: bloomxai_server.cpp
choral_ws/src/mr_het_coord/mr_het_coord_ros/: CMakeLists.txt  package.xml
choral_ws/src/mr_het_coord/mr_het_coord_ros/cfg/: config_1agents.yml  config_2_untravagents.yml  config_4_20agents.yml  config_4_untravagents.yml  config_4agents.yml  config_cave.yml  config_forest.yml  config_orchard.yml  config_park.yml  config_real.yml
choral_ws/src/mr_het_coord/mr_het_coord_ros/config/: config_1agents.yml  config_2agents.yml  config_4agents.yml  config_orchard.yml  config_real_agents2.yml  config_real_agents3.yml  rviz.rviz
choral_ws/src/mr_het_coord/mr_het_coord_ros/include/mr_het_coord_ros/: mr_het_planner_node.hpp  utils.hpp
choral_ws/src/mr_het_coord/mr_het_coord_ros/launch/: mr_coord_real.launch  mr_coord_virtual.launch
choral_ws/src/mr_het_coord/mr_het_coord_ros/scripts/: generate_cost_over_time.py  obtain_table.ipynb  run_batch.bash
choral_ws/src/mr_het_coord/mr_het_coord_ros/src/: mr_het_map_node.cpp  mr_het_vrp_node.cpp
choral_ws/src/sensors_tools/sensors_tools_ros/: package.xml  setup.py
choral_ws/src/sensors_tools/sensors_tools_ros/cfg/: sensor_airsim.yaml  sensor_airsim_open_trident.yaml  sensor_rs_open_naradio.yaml  sensor_scannet_segformer.yaml
choral_ws/src/sensors_tools/sensors_tools_ros/config/: sensor_rs_open_trident.yaml  sensor_scannet_segformer.yaml
choral_ws/src/sensors_tools/sensors_tools_ros/launch/: republish_compressed.launch.xml  semantic_sensor.launch.xml  semantic_sensor_bag.launch.xml  semantic_sensor_bag_naradio.launch.xml  semantic_sensor_real.launch.xml
docker_as2/as2_system/: CMakeLists.txt  launch_as2.bash  package.xml  setup.py  stop_tmuxinator_as2.bash
docker_as2/as2_system/config/: config.yaml  px4_config.yaml
docker_as2/as2_system/tmuxinator/: aerostack2.yaml
docker_tb2/tb2_system/: CMakeLists.txt  README.md  launch-turtlebot.yaml  package.xml  stop_tmuxinator_tb.bash
docker_tb2/tb2_system/launch/: kobuki_description.launch.py  kobuki_node_optitrack.launch.py
docker_tb2/tb2_system/urdf/: README.md  turtlebot_common_library.urdf.xacro  turtlebot_with_optitrack.urdf.xacro
docker_tb2/tb2_system/urdf/sensors/: astra.urdf.xacro  gimbal.urdf.xacro  hokuyo.urdf.xacro  kinect.urdf.xacro  r200.urdf.xacro  xtion_pro.urdf.xacro
docker_tb2/tb2_system/urdf/stacks/: circles.urdf.xacro  hexagons.urdf.xacro
mr_ws/src/Bloomxai/bloomxai_map/: CMakeLists.txt
mr_ws/src/Bloomxai/bloomxai_map/benchmark/: CMakeLists.txt  benchmark_kitti.cpp  benchmark_pointcloud.cpp
mr_ws/src/Bloomxai/bloomxai_map/include/bloomxai_map/: semantic_map.hpp
mr_ws/src/Bloomxai/bloomxai_map/src/: pcl_utils.cpp  semantic_map.cpp
mr_ws/src/het_vrp/mr_het_coord/: CMakeLists.txt  package.xml
mr_ws/src/het_vrp/mr_het_coord/cmake/: Findortools.cmake
mr_ws/src/het_vrp/mr_het_coord/include/mr_het_coord/: vrpsolver.hpp
mr_ws/src/het_vrp/mr_het_coord/include/mr_het_coord/map/: map.hpp  map_pgm.hpp
mr_ws/src/het_vrp/mr_het_coord/include/mr_het_coord/planners/: base_planner.hpp
mr_ws/src/het_vrp/mr_het_coord/scripts/: plot_maps.py
mr_ws/src/het_vrp/mr_het_coord/src/: vrpsolver.cpp
mr_ws/src/het_vrp/mr_het_coord/src/planners/graph/: astar_graph.cpp  graph_base.cpp  prm.cpp
mr_ws/src/het_vrp/mr_het_coord/src/planners/map/: rrt_star.cpp
mr_ws/src/het_vrp/mr_het_coord/test/: test_map.cpp
mr_ws/src/sensors_tools/: README.md  pyproject.toml
mr_ws/src/sensors_tools/sensors_tools/: download_sam_weights.sh  sensor.py  sensor_on_folder.py  test.py  test_open.py  test_open_naradio.py  test_open_trident.py
mr_ws/src/sensors_tools/sensors_tools/base/: cameras.py
mr_ws/src/sensors_tools/sensors_tools/bridges/: __init__.py  airsim_bridge.py  base_bridge.py  folder_bridge.py  ros_bridge.py  scannet_bridge.py  scannet_voc_bridge.py  test.py  test_bridge.py
mr_ws/src/sensors_tools/sensors_tools/inference/: __init__.py
mr_ws/src/sensors_tools/sensors_tools/inference/models/clip/: clip.py  model.py
mr_ws/src/sensors_tools/sensors_tools/inference/models/deeplabv3/: deeplab_classifier.py  resnet_backbone.py
mr_ws/src/sensors_tools/sensors_tools/inference/models/naradio/: base.py  naradio.py  prompt_templates.py  utils.py
mr_ws/src/sensors_tools/sensors_tools/inference/semantic_segmentation/: __init__.py  semantic_labels.py  semantic_segmentation_base.py  semantic_segmentation_clip.py  semantic_segmentation_deep_lab_v3.py  semantic_segmentation_naradio.py  semantic_segmentation_segformer.py  semantic_segmentation_trident.py  semantic_types.py  semantic_utils.py
mr_ws/src/sensors_tools/sensors_tools_msgs/: CMakeLists.txt
mr_ws/src/sensors_tools/sensors_tools_ros/: setup.cfg  setup.py
mr_ws/src/sensors_tools/sensors_tools_ros/cfg/: qos_profile.yaml  sensor_rs_open.yaml  sensor_rs_open_naradio.yaml  sensor_rs_open_trident.yaml
mr_ws/src/sensors_tools/sensors_tools_ros/launch/: republish_compressed.launch.xml  semantic_sensor.launch.xml  semantic_sensor_bag.launch.xml  semantic_sensor_bag_naradio.launch.xml  semantic_sensor_real.launch.xml
mr_ws/src/sensors_tools/sensors_tools_ros/sensors_tools_ros/: query_server.py  semantic_node.py  semantic_ros.py
(+163 files in other folders)
