<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
 <name>sensors_tools_ros</name>
 <version>0.0.2</version>
 <description>Sensors tools for conversion and inference</description>
 <maintainer email="anonym@anonym.com">anonym@anonym.com</maintainer>
 <license>BSD</license>

  <build_depend>ament_python</build_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>std_srvs</depend>
  <depend>cv_bridge</depend>
  <depend>tf_conversions</depend>
  <depend>sensors_tools_msg</depend>

 <test_depend>ament_copyright</test_depend>
 <test_depend>ament_flake8</test_depend>
 <test_depend>ament_pep257</test_depend>
 <test_depend>python3-pytest</test_depend>

 <export>
   <build_type>ament_python</build_type>
 </export>
</package>